# colloquio

./: .gitignore  CMakeLists.txt  README.md  python_requirements.txt
.github/workflows/: c++.yml  latex.yml
c++/: CMakeLists.txt
c++/include/: BinaryRBM.hpp  ContrastiveDivergence.hpp  MarcovChain.hpp  PersistentContrastiveDivergence.hpp  TrainingAlgorithm.hpp  TrainingSet.hpp  utility.cpp
c++/libsrc/: BinaryRBM.cpp  ContrastiveDivergence.cpp  MarcovChain.cpp  TrainingAlgorithm.cpp
c++/libsrc/tpp/: BinaryRBM.tpp  ContrastiveDivergence.tpp  MarcovChain.tpp  PersistentContrastiveDivergence.tpp  TrainingAlgorithm.tpp  TrainingSet.tpp
c++/test/: cd.cpp  generator.py  learn-generated.cpp
classification/: CMakeLists.txt  logistic-regression.py  mnist-hidden-probabilities.cpp
dataset/: README.md  clean-logistic-accuracy.txt  clean-logistic-regression.py  get-mnist.py  mnist-example.py  mnist-example.txt
dataset/trained-rbm/1086/: psl.txt
dataset/trained-rbm/142/: psl.txt
dataset/trained-rbm/250/: psl.txt
dataset/trained-rbm/567137/: psl.txt
latex/: bibliography.bib  emf-shortcuts.tex  make-handout  pack.sty
latex/img/: example-RBM.tikz
latex/img/graphical-picture/: order0.tikz  order1.tikz  order2.tikz  order3-direct.tikz  order3-triangle.tikz  order4-direct.tikz  order4-quad.tikz  order4-triangle.tikz
latex/notebook/: EMF-training.tex  classical-training-algorithms.tex  emf-shortcuts.tex  implementation-details.tex  model.tex  notebook.tex  pack-notebook.sty
latex/slides/: backup-slides.tex  classical-algorithms.tex  extended-mean-field.tex  introduction-model.tex  numerical-experiments.tex  slides.tex
learning/: mnist-generator.cpp  mnist-stability-test.cpp  mnist.cpp
rbm-library/: CMakeLists.txt  README.md
rbm-library/include/: BernoulliRBM.hpp  BinaryRBM.hpp  ContrastiveDivergence.hpp  ExtendedMeanField.hpp  MarcovChain.hpp  MarkovChain.hpp  PersistentContrastiveDivergence.hpp  TrainingAlgorithm.hpp  TrainingSet.hpp  utility.cpp
rbm-library/libsrc/: BinaryRBM.cpp  ExtendedMeanField.cpp  MarcovChain.cpp
rbm-library/libsrc/tpp/: ExtendedMeanField.tpp  MarcovChain.tpp  MarkovChain.tpp  PersistentContrastiveDivergence.tpp  TrainingAlgorithm.tpp
rbm-library/src/: BernoulliRBM.cpp  BinaryRBM.cpp  ExtendedMeanField.cpp  MarkovChain.cpp  PersistentContrastiveDivergence.cpp  TrainingSet.cpp
rbm-library/src/tpp/: BernoulliRBM.tpp  BinaryRBM.tpp  ContrastiveDivergence.tpp  ExtendedMeanField.tpp  MarkovChain.tpp  PersistentContrastiveDivergence.tpp  TrainingAlgorithm.tpp  TrainingSet.tpp
rbm-library/test/: cd.cpp  generator.py  learn-generated.cpp  rbm.cpp
simulations/: CMakeLists.txt  mnist-generator.cpp  mnist-stability-test.cpp  mnist.cpp  psl-plotter.py  visualizer.py
